--- a/00 Calculator/package.json
+++ b/00 Calculator/package.json
@@ -6,10 +6,9 @@
     "typescript": "^5.1.6"
   },
   "name": "calculator_common_solution",
-  "version": "1.1.2",
-  "bin": {
-    "calculator_common_solution": "./index.js"
-  },
+  "version": "1.1.3",
+  "type": "module",
+  "bin": "./index.js",
   "main": "index.js",
   "devDependencies": {
     "@types/chalk": "^2.2.0",
@@ -17,7 +16,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/node": "^20.4.5"
   },
-  "type": "module",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
